# shader-s_principle

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  devlog.md  devlog_2.md  plan.md  ref.md  vcpkg.json
assets/cheese/: cheese.mtl
assets/oiiai/: oiiai.mtl
docs/: devlog.md  devlog_2.md  plan.md  ref.md  remind.md
include/: Camera.h  ComputeUnit.hpp  Control.h  Data.hpp  DepthBuffer.h  Framebuffer.h  Mesh.h  ObjLoader.h  Pipeline.h  Rasterizer.h  Renderer.h  Screen.h  Screen.hpp  Shader.h  Texture.h  Types.h
src/: CMakeLists.txt  Camera.cpp  ComputeUnit.cpp  Control.cpp  Data.cpp  DepthBuffer.cpp  Framebuffer.cpp  Mesh.cpp  ObjLoader.cpp  Pipeline.cpp  Rasterizer.cpp  Renderer.cpp  Screen.cpp  Shader.cpp  Texture.cpp  main.cpp
